static/styles.css
body {
    background-color: #cccccc;
    height: 750px;
    background-position: center;
    background-repeat: repeat;
    background-size: cover;
  }
  
  .navbar {
    max-height: 50px;
  }
  .navigation .navbar-brand {
    color: rgb(52, 149, 165);
    margin-left: 0px;
    padding: inherit;
    font-weight: bold;
    background-color: rgb(255, 255, 255);
    font-family: cochin;
  }
  .navbar {
    background-color: rgb(255, 255, 255);
    font-size: 25px; 
  }
  .active, .dropdown-menu .dropdown-item:active a:hover {
    background-color: rgb(255,255,255);
  }
  .dropdown-item {
    color: rgba(52, 150, 165, 0.75);
  }
  .dropdown .dropdown-menu .dropdown-item:active, .dropdown .dropdown-menu .dropdown-item:hover {
    background-color: rgba(52, 150, 165, 0.75);
  }
  
  .nav-link:hover {
    background-color:rgba(52, 150, 165, 0.75);
   }
  
  .navbar-brand:hover {
  color: rgb(45, 158, 175);
  }
  a {
    color: rgb(231, 231, 231);
    font-size: 15px;
  }
  
  img{
    width:100%;
    height:100%;
  }
  .active, .panel:hover {
    border-color:rgb(52, 149, 165);
    border-style: solid;
    
  }
  .vizualization {
    width:50%;
    height:50%;
  }
  
  .title {
    color: rgb(52, 149, 165);
    font-family: cochin;
    font-weight: bolder;
    padding-top: 10px;
  }
  
  p {
  color: rgb(52, 149, 165);
  font-family: 'segoe ui';
  font-size: 16px;
  }
  
  .box {
    margin-top: 50px;
    margin-bottom: 60px;
    padding: 10px 30px 10px;
    color: #ffffff;
    background-color: rgb(255, 255, 255);
  
  }
  
  .table {
    font-size: 15px;
    border-top-color: rgb(255, 255, 255);
  }
  
  footer {
  background-color: #000000;
  border-top-style: solid;
  border-top-width: 5px;
  border-top-color: rgb(37, 80, 87);
  color: rgb(171, 222, 226);
  min-height: 50px;
  font-family: Menlo, Helvetica, sans-serif;
  font-size: 10px;
  text-align: center;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  padding-top: 15px;
  }

  #summary {
    text-align: center;
    font-size: 15px;
  }

  #fedminwage {
    text-align: center;
    font-size: 15px;
  }

  #livingwage {
    font-size: 15px;
  }
  h2 {
    font-size: 25px;
    font-weight: bolder;
  }

  h3 {
    font-size: 20px;
  }

  .grid-container {
    gap: 20px;
    column-gap: 20px;
    row-gap: 20px;
  }

  #links {
    color: blue;
  }

  #libraries {
    color: rgb(248, 59, 153);
  }
  
  @media(max-width: 992px) {
    .navbar-expand-lg {
    background-color: #000000;
    }
    .navbar {
      max-height: none;
      padding: inherit;
    }
    .navbar div {
      margin: inherit;
      background-color: rgb(255,255,255);
    }
    .navbar-brand {
      padding: 10px;
    }
    button{
      margin-right: 30px;
    }
    button:focus {
      outline: 1px dotted;
      outline: auto 5px;
    }
  }
        
/* Legend Position Style */
.legend {
	position:absolute;
	left:20px;
	top:30px;
}

.axis text {
	font: 10px sans-serif;
}

.axis line, .axis path {
	fill: none;
	stroke: #000;
	shape-rendering: crispEdges;
}

path:hover {fill-opacity: .7;}

.tooltip {
  display: none;
  position: absolute;
  width: 100px;
  height: 30px;
  padding: 1px;
  font: 12px sans-serif;
  color:#ffffff;
  text-align: center;
  background: black;
  border: 0;
  border-radius: 10px;
}

